--- a/25-wordpress-snippets.html
+++ b/25-wordpress-snippets.html
@@ -1,56 +1,72 @@
-### 25 very useful wordpress Snippets
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <title>25 Useful Wordpress Snippets </title>
+  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
-1. [Notify WordPress users of newly published custom post types](http://advent.squareonemd.co.uk/notify-wordpress-users-of-newly-published-custom-post-types/) 
-
-2. [Create a welcome email for newly added WordPress users](http://advent.squareonemd.co.uk/create-a-welcome-email-for-newly-added-wordpress-users/) 
-
-3. [A useful way to create new WordPress arrays](http://advent.squareonemd.co.uk/a-useful-way-to-create-new-wordpress-arrays/) 
-
-4. [Controlling WordPress Custom Post Types, Capabilities and Roles](http://advent.squareonemd.co.uk/controlling-wordpress-custom-post-types-capabilities-and-roles/) 
-
-5. [Group recent WordPress posts by date published](http://advent.squareonemd.co.uk/group-recent-wordpress-posts-by-date-published/) 
-
-6. [Set the WordPress admin colour scheme for different users and roles](http://advent.squareonemd.co.uk/set-the-wordpress-admin-colour-scheme-for-different-users-and-roles/) 
-
-7. [Create multiple WordPress roles and limited capabilities for Schools](http://advent.squareonemd.co.uk/create-multiple-wordpress-roles-and-limited-capabilities-for-schools/) 
-
-8. [Integrating responsive-nav.js into WordPress Navigation](http://advent.squareonemd.co.uk/integrating-responsive-nav-js-wordpress-navigation/) 
-
-9. [Find Pages using given WordPress shortcode](http://advent.squareonemd.co.uk/find-pages-using-given-wordpress-shortcode/) 
-
-10. [Playing Nice With WordPress paginate_links function](http://advent.squareonemd.co.uk/playing-nice-with-wordpress-paginate_links-function/) 
-
-11. [Prevent loading unnecessary scripts and styles in WordPress](http://advent.squareonemd.co.uk/prevent-loading-unnecessary-scripts-and-styles-in-wordpress/) 
-
-12. [Make menu highlights work for custom post types](http://advent.squareonemd.co.uk/make-menu-highlights-work-custom-post-types/) 
-
-13. [Add a Custom Post Type Submenu To An Existing Custom Post Type Menu](http://advent.squareonemd.co.uk/add-custom-post-type-submenu-existing-custom-post-type-menu/) 
-
-14. [Get #WordPress page view count from Jetpack](http://advent.squareonemd.co.uk/get-wordpress-page-view-count-from-jetpack/) 
-
-15. [Display OptionTree created Slider using the Flexslider image slider from WooThemes](http://advent.squareonemd.co.uk/display-optiontree-created-slider-using-the-flexslider-image-slider-from-woothemes/) 
-
-16. [Append Items to a Nav Menu](http://advent.squareonemd.co.uk/append-items-nav-menu/) 
-
-17. [Properly enqueuing script and styles in WordPress](http://advent.squareonemd.co.uk/properly-enqueuing-script-and-styles-in-wordpress/) 
-
-18. [Show Custom Post Types on the Homepage](http://advent.squareonemd.co.uk/show-custom-post-types-homepage/) 
-
-19. [Automatically deactivate plugin when parent plugin is deactivated](http://advent.squareonemd.co.uk/automatically-deactivate-plugin-parent-plugin-deactivated/) 
-
-20. [Get a list of WordPress post types that support a feature](http://advent.squareonemd.co.uk/get-a-list-of-wordpress-post-types-that-support-a-feature/) 
-
-21. [Paginate WordPress posts with a thumbnail image](http://advent.squareonemd.co.uk/paginate-wordpress-posts-thumbnail-image/) 
-
-22. [A WordPress function to stop non logged in users accessing a page or pages](http://advent.squareonemd.co.uk/a-wordpress-function-to-stop-non-logged-in-users-accessing-a-page-or-pages/) 
-
-23. [Enable Automatic Updates for WordPress Plugins and Themes](http://advent.squareonemd.co.uk/enable-automatic-updates-for-wordpress-plugins-and-themes/) 
-
-24. [Create your own registration form in WordPress](http://advent.squareonemd.co.uk/create-your-own-registration-form-in-wordpress/) 
-
-25. [Time to resurrect WordPress Snippets til Christmas 2013](http://advent.squareonemd.co.uk/time-to-resurrect-wordpress-snippets-til-christmas-2013/) 
-
-
-
-
-##### Taken From [WordPress advent calendar 2013 just for fun!](http://advent.squareonemd.co.uk/)
+</head>
+<body>
+  <div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>25 Useful Wordpress Snippets </h3>
+            <ul class="list-group">
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/notify-wordpress-users-of-newly-published-custom-post-types/">Notify WordPress users of newly published custom post types</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/create-a-welcome-email-for-newly-added-wordpress-users/">Create a welcome email for newly added WordPress users</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/a-useful-way-to-create-new-wordpress-arrays/">A useful way to create new WordPress arrays</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/controlling-wordpress-custom-post-types-capabilities-and-roles/">Controlling WordPress Custom Post Types, Capabilities and Roles</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/group-recent-wordpress-posts-by-date-published/">Group recent WordPress posts by date published</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/set-the-wordpress-admin-colour-scheme-for-different-users-and-roles/">Set the WordPress admin colour scheme for different users and roles</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/create-multiple-wordpress-roles-and-limited-capabilities-for-schools/">Create multiple WordPress roles and limited capabilities for Schools</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/integrating-responsive-nav-js-wordpress-navigation/">Integrating responsive-nav.js into WordPress Navigation</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/find-pages-using-given-wordpress-shortcode/">Find Pages using given WordPress shortcode</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/playing-nice-with-wordpress-paginate_links-function/">Playing Nice With WordPress paginate_links function</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/prevent-loading-unnecessary-scripts-and-styles-in-wordpress/">Prevent loading unnecessary scripts and styles in WordPress</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/make-menu-highlights-work-custom-post-types/">Make menu highlights work for custom post types</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/add-custom-post-type-submenu-existing-custom-post-type-menu/">Add a Custom Post Type Submenu To An Existing Custom Post Type Menu</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/get-wordpress-page-view-count-from-jetpack/">Get #WordPress page view count from Jetpack</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/display-optiontree-created-slider-using-the-flexslider-image-slider-from-woothemes/">Display OptionTree created Slider using the Flexslider image slider from WooThemes</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/append-items-nav-menu/">Append Items to a Nav Menu</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/properly-enqueuing-script-and-styles-in-wordpress/">Properly enqueuing script and styles in WordPress</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/show-custom-post-types-homepage/">Show Custom Post Types on the Homepage</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/automatically-deactivate-plugin-parent-plugin-deactivated/">Automatically deactivate plugin when parent plugin is deactivated</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/get-a-list-of-wordpress-post-types-that-support-a-feature/">Get a list of WordPress post types that support a feature</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/paginate-wordpress-posts-thumbnail-image/">Paginate WordPress posts with a thumbnail image</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/a-wordpress-function-to-stop-non-logged-in-users-accessing-a-page-or-pages/">A WordPress function to stop non logged in users accessing a page or pages</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/enable-automatic-updates-for-wordpress-plugins-and-themes/">Enable Automatic Updates for WordPress Plugins and Themes</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/create-your-own-registration-form-in-wordpress/">Create your own registration form in WordPress</a>
+            </li>
+            <li class="list-group-item"><a href="http://advent.squareonemd.co.uk/time-to-resurrect-wordpress-snippets-til-christmas-2013/">Time to resurrect WordPress Snippets til Christmas 2013</a>
+            </li>
+            </ul>
+            <h4>Credit : <a href="http://advent.squareonemd.co.uk/">http://advent.squareonemd.co.uk/</a></h4>
+        </div>
+    </div>
+</div>
+</div>
+</body>
+</html>
