--- a/digital-world-expo/index.html
+++ b/digital-world-expo/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>reveal.js - The HTML Presentation Framework</title>
+	<title>Getting the Max out of Chrome Dev Tools</title>
 
 	<meta name="description" content="Using Chrome Dev Tools">
 	<meta name="author" content="Md. Mahbubur Rahman <mahbub@mahbubblog.com>">
