Added orientation slide and some people to follow.

--- a/digital-world-expo/index.html
+++ b/digital-world-expo/index.html
@@ -115,9 +115,14 @@
 				</section>				
 
 				<section data-background="images/wood_1_2X.png" data-background-size="400px" data-background-repeat="repeat">		
-					<h3>Device Emulatotion</h3>					
+					<h3>Device Emulation</h3>					
 					<img src="images/emulator.png" alt="Emulator" border="0" class="transparent">										
-				</section>				
+				</section>
+
+				<section data-background="images/wood_1_2X.png" data-background-size="400px" data-background-repeat="repeat">		
+					<h3>Device Orientation : Accelerometer</h3>					
+					<img src="images/orientation.gif" alt="Emulator" border="0" class="transparent">										
+				</section>
 
 				<section>
 					<section data-background="images/wood_1_2X.png" data-background-size="400px" data-background-repeat="repeat">		
@@ -153,12 +158,22 @@
 					</section>				
 				</section>
 
+
+
 				<section>
 					<h2>Thanks for Patience :)</h2>
 					<br />
 					<h3>Md. Mahbubur Rahman</h3>
 					<h6>CTO, iViveLabs</h6>
 					<h5>twitter.com/pappu687</h5>					
+					<br />
+					<br />
+					<h4 style="color:#36D7B7">For Chrome Dev Tools related resource Follow : </h4>
+					<ul>
+					<li><a href="https://plus.google.com/u/0/+AddyOsmani">Addy Osmani</a></li>
+					<li><a href="https://plus.google.com/u/0/+UmarHansa">Umar Hansa</a></li>
+					<li><a href="https://plus.google.com/u/0/explore/DevTools">#DevTools on Google Plus</a></li>
+					</ul>
 				</section>
 
 			</div>
