--- a/digital-world-expo/index.html
+++ b/digital-world-expo/index.html
@@ -161,7 +161,7 @@
 
 
 				<section>
-					<h2>Thanks for Patience :)</h2>
+					<h2>Thanks for your Patience :)</h2>
 					<br />
 					<h3>Md. Mahbubur Rahman</h3>
 					<h6>CTO, iViveLabs</h6>
