Added a slide for controller vs linking

--- a/ng-conf-directives/index.html
+++ b/ng-conf-directives/index.html
@@ -46,7 +46,7 @@
 			<div class="slides">
 				<section data-background="#22313F">
 					<img src="images/angularjs-logo-trans.png" alt="AngularJS" border="0" class="transparent">
-					<h3 style="line-height:1.2em">How *not to scratch* your head with AngularJS Directives</h3>
+					<h3 style="line-height:1.2em">How <span style="color:#F9BF3B;">*not to scratch*</span> your head with AngularJS Directives</h3>
 				</section>
 
 				<section data-background="images/ask-cat-question-232.jpg">
@@ -245,14 +245,23 @@
 </section>
 
 <section>	
-	<h3 style="font-family:merriweather_sansbold;color:#DB0A5B">Things to keep in mind</h3>		<br>			
+	<h2 style="font-family:merriweather_sansbold;color:#DB0A5B">Things to keep in mind</h2>		<br>			
 	<div class="fragment">
-		<h4>Phases</h4>
+		<h3>Phases</h3>
 	</div>
 	<div class="fragment">
 		<p>Compile (pre &amp; post)</p>
 		<p>Linking (pre &amp; post)</p>
 		<p>Controller</p>		
+	</div>
+</section>
+
+<section>	
+	<h2 style="font-family:merriweather_sansbold;color:#DB0A5B">&amp; things to keep in mind</h2>		<br>			
+		<h3 style="line-height:1.5em;">What do I use, Controller or Link in Directives ?</h3><br>
+	<div class="fragment">
+		<p>Before Compilation =&gt; <span style="color:#22A7F0">Controller</span></p>
+		<p>After Compilation =&gt; <span style="color:#22A7F0">Link</span></p>
 	</div>
 </section>
 
