Fixed a small typo

--- a/dw-2015-mahbub/index.html
+++ b/dw-2015-mahbub/index.html
@@ -172,7 +172,7 @@ $ pip install supervisor
                                                       <pre>
                                           <code data-trim> 
                                   
-                  $ vim /etc/supervisor
+                  $ vim /etc/supervisor/conf.d/myqueue.conf
 
                                           </code></pre>           
                                                   </div> 
