--- a/softexpo-2017/index.html
+++ b/softexpo-2017/index.html
@@ -33,7 +33,7 @@
 		<div class="slides">
 			<section>
 				<img src="images/electron-logo.svg" style="width:60%; border:0;box-shadow: none;" alt="Electron">
-				<h4>Building Cross Platform Desltop Applications with <span style="color: #27ae60; font-size: 1.2em;">Inner Peace</span></h4>
+				<h4>Building Cross Platform Desktop Applications with <span style="color: #27ae60; font-size: 1.2em;">Inner Peace</span></h4>
 				<img src="images/po.png" style="border:0;box-shadow: none;height:300px" alt="Inner Peace">
 			</section>
 			<section>
